--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Chat#show</h1>
-<p>Find me in app/views/chat/show.html.erb</p>
+<h1>Chat</h1>
+
+
+
+<br>
+<label>Message:</label>
+<input type="text" id="message_form" value="">
+<br>
+
+<input type="button" data-behavior="chat_input" value="Submit">
+
+<h5>Received Messages</h5>
+<ul id="messages">
+</ul>
+
