途中経過：Herokuにデプロイできるかどうかの確認

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -5,6 +5,9 @@
 <p><%= @msg %></p>
 
 <hr>
+<h2><%=link_to "LINE", chat_show_url%></h2>
+
+<hr>
 
 <div><%=link_to 'Sign out&gt;&gt'.html_safe,destroy_user_session_path,method: :delete %></div>
 
