--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -16,3 +16,34 @@
 <ul id="messages">
 </ul>
 
+<!--左からの吹き出し-->
+<div class="kaiwa">
+ <figure class="kaiwa-img-left">
+ <%= image_tag 'Mike.png',:size =>'100x100'%>
+ <figcaption class="kaiwa-img-description">
+     にゃー
+ </figcaption>
+ </figure>
+ <div class="kaiwa-text-right">
+   <p class="kaiwa-text">
+   <ul id="messages">
+   </ul>
+   </p>
+   </div>
+</div>
+
+<!--右からの吹き出し-->
+<div class="kaiwa">
+ <figure class="kaiwa-img-right">
+   <%= image_tag 'ミニオンズ.png',:size =>'100x100'%>
+
+ <figcaption class="kaiwa-img-description">
+     にゃー
+ </figcaption>
+ </figure>
+ <div class="kaiwa-text-left">
+   <p class="kaiwa-text">
+     にゃー！にゃー！にゃー！にゃー！にゃー！にゃー！にゃー！にゃー！
+   </p>
+ </div>
+</div>
