--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -2,6 +2,11 @@
 
 <h2><%= @users %>
 
+
+
+<br>
+<label>Name:</label>
+<input type="text" id="name_form" value="<%= @users %>">
 <br>
 <label>Message:</label>
 <input type="text" id="message_form" value="">
