--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -4,97 +4,34 @@
 /*--------------------
  吹き出しを作る
 --------------------*/
-/* 全体のスタイル */
-.kaiwa {
-    margin-bottom: 40px;
-  }
-  /* 左画像 */
-  .kaiwa-img-left {
-    margin: 0;
-    float: left;
-    width: 60px;
-    height: 60px;
-  }
-  /* 右画像 */
-  .kaiwa-img-right {
-    margin: 0;
-    float: right;
-    width: 60px;
-    height: 60px;
-  }
-  .kaiwa figure img {
-    width: 100%;
-    height: 100%;
-    border: 1px solid #aaa;
-    border-radius: 50%;
-    margin: 0;
-  }
-  /* 画像の下のテキスト */
-  .kaiwa-img-description {
-    padding: 5px 0 0;
-    font-size: 10px;
-    text-align: center;
-  }
-  /* 左からの吹き出しテキスト */
-  .kaiwa-text-right {
-    position: relative;
-    margin-left: 80px;
-    padding: 10px;
-    border: 1px solid #aaa;
-    border-radius: 10px;
-  }
-  /* 右からの吹き出しテキスト */
-  .kaiwa-text-left {
-    position: relative;
-    margin-right: 80px;
-    padding: 10px;
-    border: 1px solid #aaa;
-    border-radius: 10px;
-  }
-  p.kaiwa-text {
-    margin: 0 0 20px;
-  }
-  p.kaiwa-text:last-child {
-    margin-bottom: 0;
-  }
-  /* 左の三角形を作る */
-  .kaiwa-text-right:before {
-    position: absolute;
-    content: '';
-    border: 10px solid transparent;
-    border-right: 10px solid #aaa;
-    top: 15px;
-    left: -20px;
-  }
-  .kaiwa-text-right:after {
-    position: absolute;
-    content: '';
-    border: 10px solid transparent;
-    border-right: 10px solid #fff;
-    top: 15px;
-    left: -19px;
-  }
-  /* 右の三角形を作る */
-  .kaiwa-text-left:before {
-    position: absolute;
-    content: '';
-    border: 10px solid transparent;
-    border-left: 10px solid #aaa;
-    top: 15px;
-    right: -20px;
-  }
-  .kaiwa-text-left:after {
-    position: absolute;
-    content: '';
-    border: 10px solid transparent;
-    border-left: 10px solid #fff;
-    top: 15px;
-    right: -19px;
-  }
-  /* 回り込み解除 */
-  .kaiwa:after,.kaiwa:before {
-    clear: both;
-    content: "";
-    display: block;
-  }
-  
+.balloon3-right-btm {
+  position: relative;
+ display: inline-block;
+ margin: 1.5em 15px 1.5em 0;
+ padding: 0 5px;
+ width: 100px;
+ height: 80px;
+ line-height: 90px;
+ vertical-align: middle;
+ text-align: center;
+ color: #FFF;
+ font-size: 20px;
+ font-weight: bold;
+ background: #5deb25;
+ border-radius: 50%;
+ box-sizing: border-box;
+}
+
+.balloon3-right-btm:before{
+ content: "";
+ position: absolute;
+ bottom: -8px;
+ right: -8px;
+ margin-top: -15px;
+ border: 15px solid transparent;
+ border-left: 15px solid #5deb25;
+ z-index: 0;
+ -ms-transform: rotate(45deg);
+ -webkit-transform: rotate(45deg);
+ transform: rotate(45deg);
+}
