削除機能の追加

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -35,3 +35,9 @@
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
 }
+th{
+  background-color: #BAD3FF;
+  color: #606060;
+  
+  text-align: center;
+}
